--- a/gateway/src/main/resources/application-dev.yaml
+++ b/gateway/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
       host: ${DEV_REDIS_HOST}
       port: ${DEV_REDIS_PORT}
       database: ${DEV_REDIS_DATABASE}
-      password: ${DEV_REDIS_PASSWORD}
+      # password: ${DEV_REDIS_PASSWORD}
   cloud:
     gateway:
       globalcors:
