--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,15 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <revision>1.0.2</revision>
         <!-- spring -->
-        <spring-boot.version>3.2.12</spring-boot.version>
-        <spring-cloud.version>2023.0.3</spring-cloud.version>
-        <spring-cloud-alibaba.version>2023.0.1.2</spring-cloud-alibaba.version>
+        <spring-boot.version>3.4.1</spring-boot.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
+        <spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
         <!-- Web -->
-        <springdoc.version>2.7.0</springdoc.version>
-        <knife4j.version>4.6.0</knife4j.version>
-        <knife4j-gateway.version>4.5.0</knife4j-gateway.version>
+        <springdoc.version>2.8.14</springdoc.version>
+        <knife4j.version>4.4.0</knife4j.version>
         <dubbo.version>3.3.0</dubbo.version>
         <!-- Database -->
-        <mybatis-plus.version>3.5.9</mybatis-plus.version>
+        <mybatis-plus.version>3.5.5</mybatis-plus.version>
         <druid.version>1.2.24</druid.version>
         <dynamic-datasource.version>4.3.1</dynamic-datasource.version>
         <redisson.version>3.41.0</redisson.version>
@@ -50,8 +49,8 @@
         <!-- Utils -->
         <fastjson.version>2.0.57</fastjson.version>
         <commons.io.version>2.18.0</commons.io.version>
-        <poi.version>5.3.0</poi.version>
-        <guava.version>33.3.1-jre</guava.version>
+        <poi.version>4.1.2</poi.version>
+        <guava.version>33.4.0-jre</guava.version>
         <jakarta-validation.version>3.0.2</jakarta-validation.version>
         <lombok.version>1.18.36</lombok.version>
         <hutool.version>5.8.32</hutool.version>
@@ -171,23 +170,28 @@
 				</exclusions>
 			</dependency>
 
-            <!-- swagger 3 -->
             <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-                <version>${springdoc.version}</version>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springdoc</groupId>
+                        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
-                <groupId>com.github.xingfudeshi</groupId>
-                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
-                <version>${knife4j.version}</version>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.github.xiaoymin</groupId> <!-- 接口文档 UI：knife4j【网关专属】 -->
                 <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
-                <version>${knife4j-gateway.version}</version>
+                <version>${knife4j.version}</version>
             </dependency>
 
             <!-- validation annotation -->
