--- a/task-service/src/main/resources/application-dev.yaml
+++ b/task-service/src/main/resources/application-dev.yaml
@@ -49,7 +49,7 @@ spring:
       host: ${DEV_REDIS_HOST}
       port: ${DEV_REDIS_PORT}
       database: ${DEV_REDIS_DATABASE}
-      password: ${DEV_REDIS_PASSWORD}
+      # password: ${DEV_REDIS_PASSWORD}
 
 # Lock4j config
 lock4j:
