--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -47,7 +47,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>nus.edu.u</groupId>
             <artifactId>framework</artifactId>
@@ -57,7 +56,11 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>spring-cloud-gcp-starter-pubsub</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>10.7</version>
+        </dependency>
         <dependency>
             <groupId>nus.edu.u</groupId>
             <artifactId>shared-api</artifactId>
