Add Firebase SSO and TOTP MFA authentication
- Add Firebase Authentication integration (Google, Microsoft, Facebook, Apple, SAML, OIDC)
- Add TOTP two-factor authentication for password-based login
- Add FirebaseAuthController and TotpController endpoints
- Add TotpService for TOTP secret generation and verification
- Add FirebaseConfig and FirebaseAuthService for token verification
- Update UserDO with firebase_uid, totp_secret, totp_enabled fields
- Update LoginRespVO with mfaRequired and mfaToken fields
- Update gateway whitelist for TOTP verify endpoint
- Add SQL migrations for firebase_uid and TOTP columns
- Add security audit logger and rate limiter utilities
- Update .gitignore for dev artifacts

--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -128,6 +128,10 @@ gateway:
   white-list:
     - /users/auth/login
     - /users/auth/refresh
+    - /users/auth/firebase-login
+    - /users/auth/firebase-register
+    - /users/auth/firebase-refresh
+    - /users/auth/totp/verify
     - /users/reg/**
     - /ws
     - /ws/internal/**
@@ -136,6 +140,7 @@ gateway:
     - /favicon.ico
     - /v3/**
     - /*/v3/**
+    - /actuator/health
 
 ############## Sa-Token config (文档: https://sa-token.cc) ##############
 sa-token:
