Remove fake-gcp-credentials.json and add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ nul
 # Local dev scripts (optional - remove if you want to share)
 run-*.ps1
 run-*.bat
+
+# Fake credentials
+fake-gcp-credentials.json
