Add STRIDE-based audit logging and audit log UI API
- Add audit_log table, AuditAspect, AuditLogWriterService for async/sync persistence
- Add @Auditable annotation for declarative audit logging on service methods
- Add SecurityAuditLogger resultCode for success/failure security events
- Add RequestAuditFilter in gateway for API access logging
- Add AuditLogController with paginated query endpoint (GET /users/audit-logs)
- Add SQL migrations for audit_log table and resultCode backfill
- Add unit tests for audit service, controller, and gateway filter

--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,7 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                         <fork>true</fork>
+                        <parameters>true</parameters>
                         <annotationProcessorPaths>
                             <!-- MapStruct 注解处理器 -->
                             <path>
